[gd_scene load_steps=8 format=3 uid="uid://bcmvkkx6ovlfh"]

[ext_resource type="Script" uid="uid://sah41kihxeif" path="res://GUI/Menu_Game/menu_game.gd" id="1_yl80j"]
[ext_resource type="Texture2D" uid="uid://djbhp2cofutn1" path="res://Texture/bgMain.jpeg" id="2_y6v5y"]
[ext_resource type="Script" uid="uid://c5sf27scwlt6h" path="res://GUI/Menu_Game/fullscreen_control.gd" id="5_7trak"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1vqnn"]
texture = ExtResource("2_y6v5y")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yl80j"]
bg_color = Color(0, 0, 0, 0.8235294)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxLine" id="StyleBoxLine_cnc36"]
color = Color(0, 0, 0, 0.513726)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_7trak"]
color = Color(1, 1, 0.67451, 1)
thickness = 6

[node name="menu_game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yl80j")

[node name="BackGround" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_1vqnn")

[node name="Main_buttons" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 192.0
offset_right = 238.0
offset_bottom = 512.0

[node name="start" type="Button" parent="Main_buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 70
text = "Start"
flat = true
alignment = 0

[node name="option" type="Button" parent="Main_buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 70
text = "Options"
flat = true
alignment = 0

[node name="credit" type="Button" parent="Main_buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 70
text = "Credit"
flat = true
alignment = 0

[node name="exit" type="Button" parent="Main_buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 70
text = "Exit"
flat = true
alignment = 0

[node name="HorrorAmbience(freeBackgroundMusic)" type="AudioStreamPlayer" parent="Main_buttons"]
autoplay = true

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 77.0
offset_right = 445.0
offset_bottom = 163.0
theme_override_colors/font_color = Color(0.956863, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "Sector: AKB-S"

[node name="Options" type="Panel" parent="."]
visible = false
modulate = Color(0.973535, 0.9735351, 0.973535, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.607
anchor_top = 0.525
anchor_right = 0.607
anchor_bottom = 0.525
offset_left = -284.264
offset_top = -176.2
offset_right = 284.736
offset_bottom = 176.8
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yl80j")

[node name="Label" type="Label" parent="Options"]
layout_mode = 0
offset_left = 21.0
offset_top = 19.0
offset_right = 180.0
offset_bottom = 79.0
theme_override_font_sizes/font_size = 60
text = "Options"

[node name="Music" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.164
anchor_top = 0.346
anchor_right = 0.164
anchor_bottom = 0.346
offset_left = -42.316
offset_top = -21.138
offset_right = 42.684
offset_bottom = 20.862
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "Music"

[node name="SFX" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.166
anchor_top = 0.581
anchor_right = 0.166
anchor_bottom = 0.581
offset_left = -42.454
offset_top = -21.093
offset_right = 42.546
offset_bottom = 20.907
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "SFX"

[node name="back" type="Button" parent="Options"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.92
anchor_top = 0.129
anchor_right = 0.92
anchor_bottom = 0.129
offset_left = -21.48
offset_top = -38.537
offset_right = 21.52
offset_bottom = 38.463
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "X"
flat = true
alignment = 0

[node name="AudioControl" type="HSlider" parent="Options"]
modulate = Color(1.6999253, 1.6999253, 1.6999253, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.347
anchor_top = 0.46
anchor_right = 0.347
anchor_bottom = 0.46
offset_left = -145.443
offset_top = -17.38
offset_right = 145.557
offset_bottom = 17.62
theme_override_styles/slider = SubResource("StyleBoxLine_cnc36")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_7trak")
max_value = 1.0
step = 0.05
value = 1.0

[node name="FullscreenControl" type="CheckButton" parent="Options"]
layout_mode = 0
offset_left = 46.0
offset_top = 286.0
offset_right = 173.0
offset_bottom = 317.0
theme_override_font_sizes/font_size = 35
text = "Fullscreen"
script = ExtResource("5_7trak")

[node name="Credits" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.607
anchor_top = 0.525
anchor_right = 0.607
anchor_bottom = 0.525
offset_left = -284.264
offset_top = -176.2
offset_right = 284.736
offset_bottom = 176.8
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yl80j")

[node name="Label" type="Label" parent="Credits"]
modulate = Color(0.9165813, 0.99430174, 0.9968806, 1)
layout_mode = 0
offset_left = 29.0
offset_top = 13.0
offset_right = 188.0
offset_bottom = 85.0
theme_override_font_sizes/font_size = 40
text = "Credits"

[node name="name" type="Label" parent="Credits"]
modulate = Color(0.92575, 0.9913915, 0.9944903, 1)
layout_mode = 0
offset_left = 54.304047
offset_top = 73.20001
offset_right = 614.3041
offset_bottom = 365.2
theme_override_font_sizes/font_size = 35
text = "CP-AI
Tanatorn Boontem
Krissanapong Songkramsong
Pakawat Chuchotiros
Phinatkanin Phisitkul"

[node name="back" type="Button" parent="Credits"]
modulate = Color(0.94927806, 0.9852025, 0.97769004, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.92
anchor_top = 0.129
anchor_right = 0.92
anchor_bottom = 0.129
offset_left = -21.48
offset_top = -38.537
offset_right = 21.52
offset_bottom = 38.463
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "X"
flat = true
alignment = 0

[connection signal="pressed" from="Main_buttons/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Main_buttons/option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="Main_buttons/credit" to="." method="_on_credit_pressed"]
[connection signal="pressed" from="Main_buttons/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Options/back" to="." method="_on_back_options_pressed"]
[connection signal="value_changed" from="Options/AudioControl" to="Options/AudioControl" method="_on_value_changed"]
[connection signal="toggled" from="Options/FullscreenControl" to="Options/FullscreenControl" method="_on_toggled"]
[connection signal="pressed" from="Credits/back" to="." method="_on_back_options_pressed"]
